--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </li>
         </ul>
         <button type="button" class="rounded-pill btn-rounded">
-          +1 728365413
+          +10 32665702
           <span>
             <i class="fas fa-phone-alt"></i>
           </span>
@@ -53,10 +53,9 @@
       <!-- START THE CONTENT FOR THE INTRO  -->
       <div class="col-md-6 intros text-start">
         <h1 class="display-2">
-          <span class="display-2--intro">Hey!, I'm Patrick</span>
+          <span class="display-2--intro">안녕하세요</span>
           <span class="display-2--description lh-base">
-            this is a multi-purpose responsive layout created with bootstrap v5. 
-            (here your can place your description text)
+            부트스트랩과 scss를 사용해서 제작된 페이지입니다.
           </span>
         </h1>
         <button type="button" class="rounded-pill btn-rounded">Get in Touch
@@ -88,41 +87,36 @@
   <section id="campanies" class="campanies">
     <div class="container">
       <div class="row text-center">
-        <h4 class="fw-bold lead mb-3">Trusted by campanies like</h4>
+        <h4 class="fw-bold lead mb-3">주로 다루는 것</h4>
         <div class="heading-line mb-5"></div>
       </div>
     </div>
     <!-- START THE CAMPANIES CONTENT  -->
     <div class="container">
       <div class="row">
-        <div class="col-md-4 col-lg-2">
+        <div class="col-md-4 col-lg-2 center-block">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-1.png" alt="Campany 1 logo" title="Campany 1 Logo" class="img-fluid">
+            <img src="images/lang/csharp.png" alt="Campany 1 logo" title="Campany 1 Logo" class="img-fluid">
           </div>
         </div>
-        <div class="col-md-4 col-lg-2">
+        <div class="col-md-4 col-lg-2 center-block">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-2.png" alt="Campany 2 logo" title="Campany 2 Logo" class="img-fluid">
+            <img src="images/lang/java.png" alt="Campany 2 logo" title="Campany 2 Logo" class="img-fluid">
           </div>
         </div>
-        <div class="col-md-4 col-lg-2">
+        <div class="col-md-4 col-lg-2 center-block">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-3.png" alt="Campany 3 logo" title="Campany 3 Logo" class="img-fluid">
+            <img src="images/lang/js.png" alt="Campany 3 logo" title="Campany 3 Logo" class="img-fluid">
           </div>
         </div>
-        <div class="col-md-4 col-lg-2">
+        <div class="col-md-4 col-lg-2 center-block">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-4.png" alt="Campany 4 logo" title="Campany 4 Logo" class="img-fluid">
+            <img src="images/lang/python.png" alt="Campany 4 logo" title="Campany 4 Logo" class="img-fluid">
           </div>
         </div>
-        <div class="col-md-4 col-lg-2">
+        <div class="col-md-4 col-lg-2 center-block">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-5.png" alt="Campany 5 logo" title="Campany 5 Logo" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-6.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
+            <img src="images/lang/spring.png" alt="Campany 5 logo" title="Campany 5 Logo" class="img-fluid">
           </div>
         </div>
       </div>
@@ -450,10 +444,10 @@
 <section id="portfolio" class="portfolio">
   <div class="container">
     <div class="row text-center mt-5">
-      <h1 class="display-3 fw-bold text-capitalize">Latest work</h1>
+      <h1 class="display-3 fw-bold text-capitalize">Portfolio</h1>
       <div class="heading-line"></div>
       <p class="lead">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint porro temporibus distinctio.
+        최근 개발한 프로젝트들입니다.
       </p>
     </div>
     <!-- FILTER BUTTONS  -->
@@ -461,7 +455,7 @@
       <div class="col-md-12">
         <button class="btn btn-outline-primary" type="button">All</button>
         <button class="btn btn-outline-primary" type="button">websites</button>
-        <button class="btn btn-outline-primary" type="button">design</button>
+        <button class="btn btn-outline-primary" type="button">programs</button>
         <button class="btn btn-outline-primary" type="button">mockup</button>
       </div>
     </div>
@@ -470,77 +464,77 @@
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-1.jpg" alt="portfolio 1 image" title="portfolio 1 picture" class="img-fluid">
+          <img src="images/portfolio/수어.png" alt="수어" title="동작인식 수어번역기" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 1</h4>
-              <p>category project</p>
+              <h4>동작인식 수어번역기</h4>
+              <p>제스쳐를 인식해서 수어로 변환해줍니다.</p>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-2.jpg" alt="portfolio 2 image" title="portfolio 2 picture" class="img-fluid">
+          <img src="images/portfolio/끝말잇기.png" alt="끝말잇기" title="끝말잇기" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 2</h4>
-              <p>category project</p>
+              <h4>끝말잇기</h4>
+              <p>음성인식으로 ai와 끝말잇기 대전을 합니다.</p>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-3.jpg" alt="portfolio 3 image" title="portfolio 3 picture" class="img-fluid">
+          <img src="images/portfolio/쇼핑몰.png" alt="쇼핑몰" title="쇼핑몰" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 3</h4>
-              <p>category project</p>
+              <h4>쇼핑몰</h4>
+              <p>jsp와 bootstrap을 사용해 만든 쇼핑몰 페이지입니다.</p>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-4.jpg" alt="portfolio 4 image" title="portfolio 4 picture" class="img-fluid">
+          <img src="images/portfolio/소드맨.png" alt="소드맨" title="소드맨" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 4</h4>
-              <p>category project</p>
+              <h4>소드맨 rpg게임</h4>
+              <p>Unity를 사용해 만든 간단한 rpg게임입니다.</p>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-5.jpg" alt="portfolio 5 image" title="portfolio 5 picture" class="img-fluid">
+          <img src="images/portfolio/app.png" alt="app" title="app" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 5</h4>
-              <p>category project</p>
+              <h4>영화 포스트</h4>
+              <p>android studio로 만든 영화 포스터 앱입니다.</p>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-6.jpg" alt="portfolio 6 image" title="portfolio 6 picture" class="img-fluid">
+          <img src="images/portfolio/시험.png" alt="시험" title="시험" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 6</h4>
-              <p>category project</p>
+              <h4>시험관리 프로그램</h4>
+              <p>java swing으로 만든 시험 관리 프로그램입니다.</p>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="images/portfolio/portfolio-7.jpg" alt="portfolio 7 image" title="portfolio 7 picture" class="img-fluid">
+          <img src="images/portfolio/led.png" alt="led" title="led" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 7</h4>
-              <p>category project</p>
+              <h4>led</h4>
+              <p>웹 페이지로 led를 제어합니다.</p>
             </div>
           </div>
         </div>
@@ -646,7 +640,7 @@
           </svg>
         </div>
         <div class="contact-box__info">
-          <a href="#" class="contact-box__info--title">+1 728365413</a>
+          <a href="#" class="contact-box__info--title">+10 32665702</a>
           <p class="contact-box__info--subtitle">  Mon-Fri 9am-6pm</p>
         </div>
       </div>  
@@ -662,7 +656,7 @@
           </svg>
         </div>
         <div class="contact-box__info">
-          <a href="#" class="contact-box__info--title">info@company.com</a>
+          <a href="#" class="contact-box__info--title">hoil20707@gmail.com</a>
           <p class="contact-box__info--subtitle">Online support</p>
         </div>
       </div>
@@ -679,8 +673,8 @@
           </svg>
         </div>
         <div class="contact-box__info">
-          <a href="#" class="contact-box__info--title">New York, USA</a>
-          <p class="contact-box__info--subtitle">NY 10012, US</p>
+          <a href="#" class="contact-box__info--title">South Korea</a>
+          <p class="contact-box__info--subtitle">01119</p>
         </div>
       </div>
     </div>
@@ -694,11 +688,7 @@
           connect with us on social media
         </div>
         <div class="col-lg-7 col-md-6">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="https://github.com/Hoil2" target="blank"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
@@ -774,7 +764,7 @@
     <script type="text/javascript">
       const lightbox = GLightbox({
         'touchNavigation': true,
-        'href': 'https://www.youtube.com/watch?v=J9lS14nM1xg',
+        'href': 'https://youtu.be/ijk1ADiqDfg',
         'type': 'video',
         'source': 'youtube', //vimeo, youtube or local
         'width': 900,
